corrected alignment of resume

--- a/vbloiseResume3Ui/src/styles.scss
+++ b/vbloiseResume3Ui/src/styles.scss
@@ -1,4 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+/*@import '~@angular/material/prebuilt-themes/indigo-pink.css';*/
+@import url('../node_modules/@angular/material/prebuilt-themes/indigo-pink.css');
+body {
+  margin: 1em;
+  margin-top: -3em;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+#main {
+  /*width: 700px;
+  height: 200px;*/
+  border: none;
+  display: -webkit-flex; /* Safari */
+  -webkit-flex-wrap: wrap; /* Safari 6.1+ */
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#main div {
+  width: 900px;
+  height: 1em;
+}
+
+div.longName {
+  width: 35em;
+  border: none;
+  word-wrap: break-word;
+}
+
+div.shortName {
+  width: 20em;
+  border: none;
+  word-wrap: break-word;
+}
+
+div.mediumName {
+  width: 30em;
+  border: none;
+  word-wrap: break-word;
+}
+
+.done {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: white;
+}
